# AnkiTools

./: .env.example  .gitignore  README.md  pyproject.toml
ankitools_lib/: anki_connect.py  config.py
ankitools_lib/card_generators/: poetry.py  sequence.py
ankitools_lib/cli/: main.py
ankitools_lib/note_transformers/: __init__.py  random_basic.py
ankitools_project/: LICENSE  README.md
ankitools_project/src/ankitools_lib/: __init__.py  ai_services.py  config.py  deck_utils.py
ankitools_project/src/ankitools_lib/card_generators/: __init__.py  arithmetic.py  poetry.py  sequence.py  spelling.py
ankitools_project/src/ankitools_lib/cli/: __init__.py  main.py
ankitools_project/src/ankitools_lib/cli/commands/: __init__.py  generate_cmds.py  list_cmds.py  transform_cmds.py
ankitools_project/src/ankitools_lib/note_transformers/: random_basic.py
context_portal/: context.db
context_portal/conport_vector_data/: chroma.sqlite3
example_data/: words_for_spelling.txt
